k8s/model-api/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api
spec:
  type: ClusterIP
  selector:
    app: model-api
  ports:
    - port: 8000
      targetPort: 8000
