k8s/model-api/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-api
  namespace: model-api
  annotations:
    cert-manager.io/cluster-issuer: swmlops-issuer # cert-manager에서 인증서를 발급받을 때 사용할 ClusterIssuer 지정
spec:
  ingressClassName: traefik # k3s 에서 기본 제공해주는 ingress controller
  tls:
    - hosts:
        - model.swmlops.site # 이 도메인으로 접속할 때 TLS 인증서 사용
      secretName: model-api-tls
  rules:
    - host: model.swmlops.site # 이 도메인으로 접속할 때 아래의 http 경로로 라우팅
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-api
                port:
                  number: 8000
